# sde-session-manager

./: .gitignore  Makefile.am  autogen.sh  configure.ac  sde-lock-screen
lxsession/: lxsession.c  settings-daemon.c
lxsession-logout/: lxsession-logout.c
sde-logout/: Makefile.am  dbus-interface.c  dbus-interface.h  sde-logout.c
sde-session-manager/: Makefile.am  sde-session-manager.c  sde-session-manager.h  settings-daemon.c  settings-daemon.h  xdg-autostart.c  xdg-autostart.h  xevent.c  xevent.h  xsettings-common.c  xsettings-common.h  xsettings-manager.c  xsettings-manager.h  xutils.c  xutils.h
